data/derived/fa15/progs/unify/prog1138.ml.out
Characters 187-200:
  |Average(i1, i2)	  -> eval (i1,x,y) +. eval (i2,x,y)  / 2
                                         ^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
